# rust-grpc-tutorial

./: Cargo.toml  README.md  build.rs
proto/: services.proto
src/: grpc_client.rs  grpc_server.rs
